--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,7 @@
-@import "Base/";
-
+@import "./Base/font";
+@import "./Base/box-sizing";
+@import "./Utils/variables";
+@import "./Utils/mixins";
+@import "./Pages/index";
+@import "./Layout/header";
+@import "./Layout/footer";
