--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,64 @@
 @font-face {
   font-family: 'Roboto';
   src: url("font/Roboto.ttf"); }
+a {
+  text-decoration: none;
+  color: black; }
+
+button {
+  border: none; }
+
+li {
+  list-style-type: none; }
+
 * {
   padding: 0px;
   margin: 0px; }
 
 body {
-  background-color: #dddddd;
+  background-color: #EAEAEA;
   padding: 0px; }
+
+.header {
+  width: 100%;
+  box-shadow: 0px 0.05em 0.5em grey;
+  background-color: white;
+  height: 65px;
+  padding-top: auto; }
+  .header__logo {
+    width: 44%;
+    margin: auto; }
+    .header__logo img {
+      width: 100%;
+      margin-top: 20px; }
+  .header__previous {
+    position: absolute;
+    top: 0.85em;
+    left: 1em;
+    border: none;
+    background-color: white;
+    font-size: 1.5em;
+    color: #2D2D2D; }
+
+.footer {
+  padding-top: 2em;
+  padding-bottom: 2em;
+  padding-left: 1em;
+  padding-right: 1em;
+  background-color: #353535; }
+  .footer__logo {
+    filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(126deg) brightness(102%) contrast(102%);
+    height: 1em;
+    margin-bottom: 1em; }
+    .footer__logo img {
+      height: 100%; }
+  .footer__link {
+    color: white;
+    padding-bottom: 0.5em; }
+    .footer__link a {
+      color: white; }
+    .footer__link i {
+      margin-right: 0.5em; }
 
 .location__current {
   width: 100%;
@@ -19,16 +70,15 @@ body {
   .location__current i {
     margin-right: 18px; }
 .location__explorate {
-  background-color: #ececec;
-  text-align: center;
   padding-top: 2em;
   padding-bottom: 2em;
   padding-left: 1em;
-  padding-right: 1em; }
+  padding-right: 1em;
+  background-color: rgba(255, 255, 255, 0.7);
+  text-align: center; }
   .location__explorate button {
     background: linear-gradient(0deg, #9356DC, #FF79DA);
     padding: 1em;
-    border: none;
     border-radius: 2em;
     color: white;
     box-shadow: 0px 0.05em 0.5em grey; }
@@ -53,29 +103,63 @@ body {
       margin-right: 1em; }
     .help__explanation i {
       color: grey; }
-    .help__explanation--color {
+    .help__explanation:hover {
       background-color: rgba(147, 86, 220, 0.1); }
-      .help__explanation--color i {
+      .help__explanation:hover i {
         color: #9356DC; }
 
-.header {
+.grid {
+  padding-top: 2em;
+  padding-bottom: 2em;
+  padding-left: 1em;
+  padding-right: 1em;
+  background-color: rgba(255, 255, 255, 0.7);
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 1;
+  row-gap: 1em; }
+
+.restaurant {
   width: 100%;
+  height: 250px;
+  border-radius: 1em;
   box-shadow: 0px 0.05em 0.5em grey;
-  background-color: white;
-  height: 65px;
-  padding-top: auto; }
-  .header__logo {
-    width: 44%;
-    margin: auto; }
-    .header__logo img {
-      width: 100%;
-      margin-top: 20px; }
-  .header__previous {
+  position: relative; }
+  .restaurant__image {
+    width: 100%;
+    height: 70%;
+    border-radius: 1em 1em 0 0;
+    object-fit: cover; }
+  .restaurant__new {
     position: absolute;
-    top: 0.85em;
-    left: 1em;
-    border: none;
-    background-color: white;
-    font-size: 1.5em; }
+    top: 0.5em;
+    right: 0.5em;
+    border-radius: 0.2em;
+    background-color: #99E2D0;
+    padding: 0.3em 0.5em;
+    color: #217460; }
+  .restaurant figcaption {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: space-between;
+    height: 27%;
+    padding: 0 1em; }
+  .restaurant__heading {
+    width: 50%; }
+  .restaurant__location {
+    width: 50%; }
+  .restaurant__like {
+    font-weight: lighter;
+    width: min-content; }
+
+.menu {
+  width: 100%;
+  background-color: #F6F6F6; }
+  .menu__image {
+    width: 100%; }
+  .menu + div {
+    display: flex; }
 
 /*# sourceMappingURL=style.css.map */
