--- a/scss/Base/_font.scss
+++ b/scss/Base/_font.scss
@@ -7,3 +7,16 @@
     font-family: 'Roboto';
     src: url('font/Roboto.ttf')
 }
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+button{
+    border: none;
+}
+
+li{
+    list-style-type: none;
+}
