--- a/scss/Layout/_header.scss
+++ b/scss/Layout/_header.scss
@@ -1,6 +1,6 @@
 .header{
     width: 100%;
-    box-shadow: 0px 0.05em 0.5em grey;
+    @include box-shadow;
     background-color: white;
     height: 65px;
     padding-top: auto;
@@ -19,5 +19,6 @@
         border: none;
         background-color: white;
         font-size: 1.5em;
+        color: #2D2D2D;
     }
 }
