--- a/scss/Pages/_index.scss
+++ b/scss/Pages/_index.scss
@@ -10,16 +10,15 @@
         }
     }
     &__explorate{
-        background-color: #ececec;
-        text-align: center;
         @include padding;
+        @include background-grey;
+        text-align: center;
         button{
             background: linear-gradient( 0deg, $color-primary, $color-secondary);
             padding: 1em;
-            border: none;
             border-radius: 2em;
             color: white;
-            box-shadow: 0px 0.05em 0.5em grey;
+            @include box-shadow;
         }
     }
 }
@@ -28,7 +27,7 @@
     @include padding;
     background-color: white;
     &__explanation{
-        box-shadow: 0px 0.05em 0.5em grey;
+        @include box-shadow;
         padding:0.8em 2em 1em;
         border-radius: 1em;
         span{
@@ -43,12 +42,64 @@
         i{
             color: grey;
         }
-        &--color{
+        &:hover{
             background-color: rgba($color-primary, .10);
             i{
                 color: $color-primary;
             }
         }
+    }
+}
+
+.grid{
+    @include padding;
+    @include background-grey;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 1;
+    row-gap: 1em;
+}
+
+
+.restaurant{
+    width: 100%;
+    height: 250px;
+    border-radius: 1em;
+    @include box-shadow;
+    position: relative;
+    &__image{
+        width: 100%;
+        height: 70%;
+        border-radius: 1em 1em 0 0;
+        object-fit: cover;
+    }
+    &__new{
+        position: absolute;
+        top: 0.5em;
+        right: 0.5em;
+        border-radius: 0.2em;
+        background-color: $color-tertiary;
+        padding: 0.3em 0.5em;
+        color: darken($color-tertiary, 45)
+    }
+    figcaption{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-content: space-between;
+        height: 27%;
+        padding: 0 1em;
+    }
+    &__heading{
+        width: 50%;
+    }
+    &__location{
+        width: 50%;
+    }
+    &__like{
+        font-weight: lighter;
+        width: min-content;
     }
 }
 
