--- a/scss/Utils/_mixins.scss
+++ b/scss/Utils/_mixins.scss
@@ -4,3 +4,11 @@
     padding-left: 1em;
     padding-right: 1em;
 }
+
+@mixin background-grey{
+    background-color: rgba(white, .7);
+}
+
+@mixin box-shadow{
+    box-shadow: 0px 0.05em 0.5em grey;
+}
