--- a/scss/Utils/_variables.scss
+++ b/scss/Utils/_variables.scss
@@ -1,3 +1,5 @@
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
+$background-color: #EAEAEA;
+$menu-background-color: #F6F6F6;
