--- a/scss/Utils/_variables.scss
+++ b/scss/Utils/_variables.scss
@@ -2,4 +2,13 @@ $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
 $background-color: #EAEAEA;
+$background-grey:rgba(white, .55);
+$background-grey2:rgba($background-color, .45);
+
 $menu-background-color: #F6F6F6;
+
+
+$box-shadow: 0px 0.05em 0.5em grey;
+
+
+$padding: 2em 0.8em;
