--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,22 @@
 @font-face {
   font-family: 'Shrikhand';
-  src: url("font/Shrikhand.ttf"); }
+  src: url("font/Shrikhand-Regular.ttf"); }
 @font-face {
   font-family: 'Roboto';
-  src: url("font/Roboto.ttf"); }
+  src: url("font/Roboto-Regular.ttf"); }
+@font-face {
+  font-family: 'Roboto Thin';
+  src: url("font/Roboto-Thin.ttf"); }
+* {
+  font-family: 'Roboto'; }
+
 a {
   text-decoration: none;
   color: black; }
 
 button {
-  border: none; }
+  border: none;
+  background-color: rgba(255, 255, 255, 0); }
 
 li {
   list-style-type: none; }
@@ -29,25 +36,22 @@ body {
   height: 65px;
   padding-top: auto; }
   .header__logo {
-    width: 44%;
+    width: 46%;
     margin: auto; }
     .header__logo img {
       width: 100%;
       margin-top: 20px; }
   .header__previous {
     position: absolute;
-    top: 0.85em;
-    left: 1em;
+    top: 1.2em;
+    left: 1.2em;
     border: none;
     background-color: white;
-    font-size: 1.5em;
+    font-size: 1.2em;
     color: #2D2D2D; }
 
 .footer {
-  padding-top: 2em;
-  padding-bottom: 2em;
-  padding-left: 1em;
-  padding-right: 1em;
+  padding: 2em 0.8em;
   background-color: #353535; }
   .footer__logo {
     filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(126deg) brightness(102%) contrast(102%);
@@ -70,11 +74,8 @@ body {
   .location__current i {
     margin-right: 18px; }
 .location__explorate {
-  padding-top: 2em;
-  padding-bottom: 2em;
-  padding-left: 1em;
-  padding-right: 1em;
-  background-color: rgba(255, 255, 255, 0.7);
+  padding: 2em 0.8em;
+  background-color: rgba(255, 255, 255, 0.55);
   text-align: center; }
   .location__explorate button {
     background: linear-gradient(0deg, #9356DC, #FF79DA);
@@ -84,12 +85,10 @@ body {
     box-shadow: 0px 0.05em 0.5em grey; }
 
 .help {
-  padding-top: 2em;
-  padding-bottom: 2em;
-  padding-left: 1em;
-  padding-right: 1em;
+  padding: 2em 0.8em;
   background-color: white; }
   .help__explanation {
+    background-color: rgba(234, 234, 234, 0.45);
     box-shadow: 0px 0.05em 0.5em grey;
     padding: 0.8em 2em 1em;
     border-radius: 1em; }
@@ -109,11 +108,8 @@ body {
         color: #9356DC; }
 
 .grid {
-  padding-top: 2em;
-  padding-bottom: 2em;
-  padding-left: 1em;
-  padding-right: 1em;
-  background-color: rgba(255, 255, 255, 0.7);
+  padding: 2em 0.8em;
+  background-color: rgba(255, 255, 255, 0.55);
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: 1;
@@ -124,7 +120,8 @@ body {
   height: 250px;
   border-radius: 1em;
   box-shadow: 0px 0.05em 0.5em grey;
-  position: relative; }
+  position: relative;
+  background-color: white; }
   .restaurant__image {
     width: 100%;
     height: 70%;
@@ -154,12 +151,85 @@ body {
     font-weight: lighter;
     width: min-content; }
 
-.menu {
-  width: 100%;
+.restaurant {
   background-color: #F6F6F6; }
-  .menu__image {
+
+.image {
+  width: 100%; }
+  .image img {
     width: 100%; }
-  .menu + div {
-    display: flex; }
+
+.menu {
+  position: relative;
+  top: -2em;
+  border-radius: 2em 2em 0 0;
+  padding: 2em 0.8em;
+  display: grid;
+  align-items: center;
+  background-color: #F6F6F6; }
+  .menu__restaurant {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1em; }
+  .menu__heading {
+    font-family: 'Shrikhand';
+    font-size: 1.8em; }
+  .menu__like {
+    background-color: none; }
+  .menu__subtitle {
+    font-family: 'Roboto Thin';
+    text-transform: uppercase;
+    margin-top: 1em;
+    margin-bottom: 0.3em; }
+  .menu__green-line {
+    background-color: #99E2D0;
+    height: 3px;
+    width: 40px;
+    margin-bottom: 1em; }
+  .menu__command {
+    background: linear-gradient(0deg, #9356DC, #FF79DA);
+    padding: 1em;
+    border-radius: 2em;
+    color: white;
+    box-shadow: 0px 0.05em 0.5em grey;
+    padding: 1em 3em;
+    margin: 1em auto;
+    width: min-content;
+    font-size: 1em; }
+
+.choice {
+  border-radius: 1em;
+  background-color: white;
+  box-shadow: 0px 0.05em 0.5em grey;
+  display: flex;
+  justify-content: space-between;
+  height: 69px;
+  width: 100%;
+  overflow: hidden;
+  margin-bottom: 1em; }
+  .choice__description {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-content: space-between;
+    padding: 0.8em;
+    width: 100%;
+    flex-wrap: wrap; }
+  .choice__heading {
+    font-size: 1.12em; }
+  .choice__side {
+    font-family: 'Roboto Thin';
+    font-size: 0.9em;
+    margin-top: auto; }
+  .choice__price {
+    font-weight: bold;
+    font-size: 1em; }
+  .choice__select {
+    position: relative;
+    left: 60px;
+    height: 100%;
+    background-color: #99E2D0;
+    color: white;
+    transform: scaleX(60px); }
 
 /*# sourceMappingURL=style.css.map */
