--- a/scss/Layout/_footer.scss
+++ b/scss/Layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer{
-    @include padding;
+    padding: $padding;
     background-color: #353535;
     &__logo{
         filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(126deg) brightness(102%) contrast(102%);
