--- a/scss/Layout/_header.scss
+++ b/scss/Layout/_header.scss
@@ -1,11 +1,11 @@
 .header{
     width: 100%;
-    @include box-shadow;
+    box-shadow: $box-shadow;
     background-color: white;
     height: 65px;
     padding-top: auto;
     &__logo{
-        width:44%;
+        width:46%;
         margin: auto;
         img{
             width:100%;
@@ -14,11 +14,11 @@
     }
     &__previous{
         position: absolute;
-        top: 0.85em;
-        left: 1em;
+        top: 1.2em;
+        left: 1.2em;
         border: none;
         background-color: white;
-        font-size: 1.5em;
+        font-size: 1.2em;
         color: #2D2D2D;
     }
 }
