--- a/scss/Utils/_mixins.scss
+++ b/scss/Utils/_mixins.scss
@@ -1,14 +1,8 @@
-@mixin padding {
-    padding-top: 2em;
-    padding-bottom: 2em; 
-    padding-left: 1em;
-    padding-right: 1em;
+@mixin button {
+    background: linear-gradient( 0deg, $color-primary, $color-secondary);
+    padding: 1em;
+    border-radius: 2em;
+    color: white;
+    box-shadow: $box-shadow;
 }
 
-@mixin background-grey{
-    background-color: rgba(white, .7);
-}
-
-@mixin box-shadow{
-    box-shadow: 0px 0.05em 0.5em grey;
-}
