--- a/css/style.css
+++ b/css/style.css
@@ -31,110 +31,147 @@ body {
 
 .header {
   width: 100%;
-  box-shadow: 0px 0.05em 0.5em grey;
+  box-shadow: 0 0.2em 0.2em #CFCFCF;
   background-color: white;
-  height: 65px;
+  height: 17.33vw;
   padding-top: auto; }
   .header__logo {
     width: 46%;
     margin: auto; }
     .header__logo img {
       width: 100%;
-      margin-top: 20px; }
+      margin-top: 5.33vw; }
   .header__previous {
     position: absolute;
-    top: 1.2em;
-    left: 1.2em;
+    top: 5.5vw;
+    left: 5.5vw;
     border: none;
     background-color: white;
-    font-size: 1.2em;
+    font-size: 5.5vw;
     color: #2D2D2D; }
 
 .footer {
-  padding: 2em 0.8em;
+  padding: 6.67vw;
   background-color: #353535; }
   .footer__logo {
     filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(126deg) brightness(102%) contrast(102%);
-    height: 1em;
-    margin-bottom: 1em; }
+    height: 4.8vw;
+    margin-bottom: 5.33vw; }
     .footer__logo img {
       height: 100%; }
   .footer__link {
     color: white;
-    padding-bottom: 0.5em; }
+    margin-bottom: 2.9vw;
+    font-size: 4.26vw; }
     .footer__link a {
       color: white; }
     .footer__link i {
-      margin-right: 0.5em; }
+      margin-right: 4vw; }
+  .footer__ustensils-icon .fas {
+    font-size: 4.28vw; }
+  .footer__hands-icon .fas {
+    font-size: 3.1vw; }
 
 .location__current {
   width: 100%;
-  padding: 15px 0px;
-  text-align: center; }
+  height: 13.33vw;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
   .location__current i {
-    margin-right: 18px; }
+    margin-right: 4.8vw;
+    font-size: 4.27vw; }
+  .location__current p {
+    margin-right: 9.33vw;
+    font-size: 4.27vw; }
 .location__explorate {
-  padding: 2em 0.8em;
+  padding: 10.67vw 10.67vw 15.2vw;
   background-color: rgba(255, 255, 255, 0.55);
   text-align: center; }
+  .location__explorate h1 {
+    margin-bottom: 5vw;
+    font-size: 6.67vw;
+    padding: 0 6.67vw; }
+  .location__explorate p {
+    font-family: 'Roboto Thin';
+    font-size: 4.3vw; }
   .location__explorate button {
     background: linear-gradient(0deg, #9356DC, #FF79DA);
-    padding: 1em;
+    padding: 4.8vw 5.87vw;
     border-radius: 2em;
     color: white;
-    box-shadow: 0px 0.05em 0.5em grey; }
+    box-shadow: 0 0.5em 0.5em #C4C4C4;
+    font-size: 4.27vw;
+    margin-top: 8.27vw; }
 
 .help {
-  padding: 2em 0.8em;
+  padding: 13.87vw 5.33vw 11.47vw;
   background-color: white; }
+  .help__heading {
+    margin-bottom: 6.67vw;
+    font-size: 6.6vw; }
   .help__explanation {
     background-color: rgba(234, 234, 234, 0.45);
-    box-shadow: 0px 0.05em 0.5em grey;
-    padding: 0.8em 2em 1em;
-    border-radius: 1em; }
+    box-shadow: 0px 0.3em 0.5em #E2E2E2;
+    padding: 6.67vw 0;
+    margin-left: 3.8vw;
+    margin-bottom: 6.67vw;
+    border-radius: 4.8vw;
+    justify-items: center;
+    position: relative; }
     .help__explanation span {
       background-color: #9356DC;
-      position: absolute;
-      left: 0.4em;
-      border-radius: 1em;
-      padding: 0.2em 0.5em;
+      position: relative;
+      right: 4%;
+      border-radius: 100%;
+      padding: 1vw 2.2vw;
       color: white;
-      margin-right: 1em; }
+      font-size: 3.8vw;
+      margin-right: 2%; }
     .help__explanation i {
-      color: grey; }
+      color: grey;
+      font-size: 5vw; }
+    .help__explanation p {
+      position: absolute;
+      left: 25%;
+      top: 6.67vw;
+      font-size: 4.26vw; }
     .help__explanation:hover {
       background-color: rgba(147, 86, 220, 0.1); }
       .help__explanation:hover i {
         color: #9356DC; }
 
 .grid {
-  padding: 2em 0.8em;
+  padding: 15.47vw 5.33vw 17.07vw;
   background-color: rgba(255, 255, 255, 0.55);
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: 1;
-  row-gap: 1em; }
+  row-gap: 4.8vw; }
+  .grid__heading {
+    font-size: 6.6vw; }
 
 .restaurant {
   width: 100%;
-  height: 250px;
-  border-radius: 1em;
-  box-shadow: 0px 0.05em 0.5em grey;
+  height: 67vw;
+  border-radius: 4vw;
+  box-shadow: 0px 0.3em 0.5em #E2E2E2;
   position: relative;
-  background-color: white; }
+  background-color: white;
+  overflow: hidden; }
   .restaurant__image {
     width: 100%;
     height: 70%;
-    border-radius: 1em 1em 0 0;
     object-fit: cover; }
   .restaurant__new {
     position: absolute;
-    top: 0.5em;
-    right: 0.5em;
-    border-radius: 0.2em;
+    top: 3.2vw;
+    right: 3.2vw;
+    border-radius: 0.5vw;
     background-color: #99E2D0;
-    padding: 0.3em 0.5em;
-    color: #217460; }
+    padding: 1.5vw 3.2vw;
+    color: #217460;
+    font-size: 3.5vw; }
   .restaurant figcaption {
     display: flex;
     flex-direction: column;
@@ -142,14 +179,16 @@ body {
     justify-content: center;
     align-content: space-between;
     height: 27%;
-    padding: 0 1em; }
+    padding: 0 6.4vw 0 3.73vw; }
   .restaurant__heading {
-    width: 50%; }
+    width: max-content;
+    font-size: 5vw; }
   .restaurant__location {
-    width: 50%; }
+    width: 80%;
+    font-size: 5vw;
+    font-family: 'Roboto Thin'; }
   .restaurant__like {
-    font-weight: lighter;
-    width: min-content; }
+    font-size: 6.4vw; }
 
 .restaurant {
   background-color: #F6F6F6; }
@@ -163,10 +202,12 @@ body {
   position: relative;
   top: -2em;
   border-radius: 2em 2em 0 0;
-  padding: 2em 0.8em;
+  padding: 3em 1em 3em;
   display: grid;
   align-items: center;
   background-color: #F6F6F6; }
+  .menu__restaurant, .menu__subtitle, .menu__green-line {
+    margin-left: 0.4em; }
   .menu__restaurant {
     display: flex;
     justify-content: space-between;
@@ -175,7 +216,9 @@ body {
     font-family: 'Shrikhand';
     font-size: 1.8em; }
   .menu__like {
-    background-color: none; }
+    background-color: none;
+    font-size: 1.6em;
+    margin-right: 0.9em; }
   .menu__subtitle {
     font-family: 'Roboto Thin';
     text-transform: uppercase;
@@ -188,19 +231,19 @@ body {
     margin-bottom: 1em; }
   .menu__command {
     background: linear-gradient(0deg, #9356DC, #FF79DA);
-    padding: 1em;
+    padding: 4.8vw 5.87vw;
     border-radius: 2em;
     color: white;
-    box-shadow: 0px 0.05em 0.5em grey;
+    box-shadow: 0 0.5em 0.5em #C4C4C4;
+    font-size: 4.27vw;
     padding: 1em 3em;
     margin: 1em auto;
-    width: min-content;
-    font-size: 1em; }
+    width: min-content; }
 
 .choice {
   border-radius: 1em;
   background-color: white;
-  box-shadow: 0px 0.05em 0.5em grey;
+  box-shadow: 0px 0.3em 0.5em #E2E2E2;
   display: flex;
   justify-content: space-between;
   height: 69px;
