--- a/scss/Layout/_footer.scss
+++ b/scss/Layout/_footer.scss
@@ -1,22 +1,33 @@
 .footer{
-    padding: $padding;
+    padding: 6.67vw ;
     background-color: #353535;
     &__logo{
         filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(126deg) brightness(102%) contrast(102%);
-        height: 1em;
-        margin-bottom: 1em;
+        height: 4.8vw;
+        margin-bottom: 5.33vw;
         img{
             height: 100%;
         }
     }
     &__link{
         color: white;
-        padding-bottom: 0.5em;
+        margin-bottom: 2.9vw;
+        font-size: 4.26vw;
         a{
             color: white;
         }
         i{
-            margin-right: 0.5em;
+            margin-right: 4vw;
+        }
+    }
+    &__ustensils-icon{
+        .fas{
+            font-size:4.28vw;
+        }
+    }
+    &__hands-icon{
+        .fas{
+            font-size:3.1vw;
         }
     }
 }
