--- a/scss/Layout/_header.scss
+++ b/scss/Layout/_header.scss
@@ -1,24 +1,24 @@
 .header{
     width: 100%;
-    box-shadow: $box-shadow;
+    box-shadow: 0 0.2em 0.2em #CFCFCF;
     background-color: white;
-    height: 65px;
+    height: 17.33vw;
     padding-top: auto;
     &__logo{
         width:46%;
         margin: auto;
         img{
             width:100%;
-            margin-top:20px;
+            margin-top:5.33vw;
         }
     }
     &__previous{
         position: absolute;
-        top: 1.2em;
-        left: 1.2em;
+        top: 5.5vw;
+        left: 5.5vw;
         border: none;
         background-color: white;
-        font-size: 1.2em;
+        font-size: 5.5vw;
         color: #2D2D2D;
     }
 }
