--- a/scss/Pages/_index.scss
+++ b/scss/Pages/_index.scss
@@ -3,41 +3,74 @@
 .location{
     &__current{
         width:100%;
-        padding: 15px 0px;
-        text-align: center;
+        height: 13.33vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         i{
-            margin-right: 18px;
+            margin-right: 4.8vw;
+            font-size: 4.27vw;
+        }
+        p{
+            margin-right: 9.33vw;
+            font-size: 4.27vw;
         }
     }
     &__explorate{
-        padding: $padding;
+        padding: 10.67vw 10.67vw 15.2vw;
         background-color: $background-grey;
         text-align: center;
+        h1{
+            margin-bottom: 5vw; 
+            font-size: 6.67vw;
+            padding: 0 6.67vw;
+        }
+        p{
+            font-family: 'Roboto Thin';
+            font-size: 4.3vw;
+        }
         button{
             @include button;
+            margin-top: 8.27vw;
         }
     }
 }
 
 .help{
-    padding: $padding;
+    padding: 13.87vw 5.33vw 11.47vw;
     background-color: white;
+    &__heading{
+        margin-bottom: 6.67vw;
+        font-size: 6.6vw;
+    }
     &__explanation{
         background-color: $background-grey2;
         box-shadow: $box-shadow;
-        padding:0.8em 2em 1em;
-        border-radius: 1em;
+        padding:6.67vw 0;
+        margin-left: 3.8vw;
+        margin-bottom: 6.67vw;
+        border-radius: 4.8vw;
+        justify-items: center;
+        position: relative;
         span{
             background-color: $color-primary;
-            position: absolute;
-            left: 0.4em;
-            border-radius:1em;
-            padding:0.2em 0.5em;
+            position: relative;
+            right: 4%;
+            border-radius:100%;
+            padding:1vw 2.2vw;
             color: white;
-            margin-right: 1em;
+            font-size: 3.8vw;
+            margin-right: 2%;
         }
         i{
             color: grey;
+            font-size: 5vw;
+        }
+        p{
+            position: absolute;
+            left: 25%;
+            top: 6.67vw;
+            font-size: 4.26vw;
         }
         &:hover{
             background-color: rgba($color-primary, .10);
@@ -49,36 +82,40 @@
 }
 
 .grid{
-    padding: $padding;
+    padding: 15.47vw 5.33vw 17.07vw;
     background-color: $background-grey;
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: 1;
-    row-gap: 1em;
+    row-gap: 4.8vw;
+    &__heading{
+        font-size: 6.6vw;
+    }
 }
 
 
 .restaurant{
     width: 100%;
-    height: 250px;
-    border-radius: 1em;
+    height: 67vw;
+    border-radius: 4vw;
     box-shadow: $box-shadow;
     position: relative;
     background-color: white;
+    overflow: hidden;
     &__image{
         width: 100%;
         height: 70%;
-        border-radius: 1em 1em 0 0;
         object-fit: cover;
     }
     &__new{
         position: absolute;
-        top: 0.5em;
-        right: 0.5em;
-        border-radius: 0.2em;
+        top: 3.2vw;
+        right: 3.2vw;
+        border-radius: 0.5vw;
         background-color: $color-tertiary;
-        padding: 0.3em 0.5em;
-        color: darken($color-tertiary, 45)
+        padding: 1.5vw 3.2vw;
+        color: darken($color-tertiary, 45);
+        font-size: 3.5vw;
     }
     figcaption{
         display: flex;
@@ -87,17 +124,19 @@
         justify-content: center;
         align-content: space-between;
         height: 27%;
-        padding: 0 1em;
+        padding: 0 6.4vw 0 3.73vw;
     }
     &__heading{
-        width: 50%;
+        width: max-content;
+        font-size: 5vw;
     }
     &__location{
-        width: 50%;
+        width: 80%;
+        font-size: 5vw;
+        font-family: 'Roboto Thin';
     }
     &__like{
-        font-weight: lighter;
-        width: min-content;
+        font-size: 6.4vw;
     }
 }
 
