--- a/scss/Utils/_mixins.scss
+++ b/scss/Utils/_mixins.scss
@@ -1,8 +1,9 @@
 @mixin button {
     background: linear-gradient( 0deg, $color-primary, $color-secondary);
-    padding: 1em;
+    padding: 4.8vw 5.87vw;
     border-radius: 2em;
     color: white;
-    box-shadow: $box-shadow;
+    box-shadow: 0 0.5em 0.5em #C4C4C4;
+    font-size: 4.27vw;
 }
 
