--- a/scss/Utils/_variables.scss
+++ b/scss/Utils/_variables.scss
@@ -8,7 +8,7 @@ $background-grey2:rgba($background-color, .45);
 $menu-background-color: #F6F6F6;
 
 
-$box-shadow: 0px 0.05em 0.5em grey;
+$box-shadow: 0px 0.3em 0.5em #E2E2E2;
 
 
-$padding: 2em 0.8em;
+$padding: 3em 1em 3em;
