--- a/scss/Base/_font.scss
+++ b/scss/Base/_font.scss
@@ -1,16 +1,16 @@
 @font-face{
     font-family: 'Shrikhand';
-    src: url('font/Shrikhand-Regular.ttf')
+    src: url('../fonts/Shrikhand-Regular.ttf');
 }
 
 @font-face{
     font-family: 'Roboto';
-    src: url('font/Roboto-Regular.ttf')
+    src: url('../fonts/Roboto-Regular.ttf');
 }
 
 @font-face{
     font-family: 'Roboto Thin';
-    src: url('font/Roboto-Thin.ttf')
+    src: url('../fonts/Roboto-Thin.ttf');
 }
 
 *{
