--- a/css/style.css
+++ b/css/style.css
@@ -98,9 +98,9 @@ body {
   .location__explorate button {
     background: linear-gradient(0deg, #9356DC, #FF79DA);
     padding: 4.8vw 5.87vw;
-    border-radius: 2em;
+    border-radius: 8.53vw;
     color: white;
-    box-shadow: 0 0.5em 0.5em #C4C4C4;
+    box-shadow: 0 2.13vw 2.13vw #C4C4C4;
     font-size: 4.27vw;
     margin-top: 8.27vw; }
 
@@ -203,7 +203,7 @@ body {
   position: relative;
   top: -10.67vw;
   border-radius: 10.67vw 10.67vw 0 0;
-  padding: 10.67vw 3.73vw 18.67vw;
+  padding: 10.67vw 3.73vw 8vw;
   display: grid;
   align-items: center;
   background-color: #F6F6F6; }
@@ -212,68 +212,70 @@ body {
   .menu__restaurant {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 9.07vw;
-    margin-right: 9.07vw; }
+    margin-bottom: 4.8vw;
+    margin-right: 6.4vw; }
   .menu__heading {
     font-family: 'Shrikhand';
-    font-size: 7.6vw; }
+    font-size: 7.3vw; }
   .menu__like {
     background-color: none;
     font-size: 6.4vw; }
   .menu__subtitle {
     font-family: 'Roboto Thin';
+    font-size: 4.27vw;
     text-transform: uppercase;
-    margin-top: 1em;
-    margin-bottom: 0.3em; }
+    margin-top: 4.27vw;
+    margin-bottom: 1.28vw; }
   .menu__green-line {
     background-color: #99E2D0;
-    height: 3px;
-    width: 40px;
-    margin-bottom: 1em; }
+    height: 0.4vw;
+    width: 10.67vw;
+    margin-bottom: 3.2vw; }
   .menu__command {
     background: linear-gradient(0deg, #9356DC, #FF79DA);
     padding: 4.8vw 5.87vw;
-    border-radius: 2em;
+    border-radius: 8.53vw;
     color: white;
-    box-shadow: 0 0.5em 0.5em #C4C4C4;
+    box-shadow: 0 2.13vw 2.13vw #C4C4C4;
     font-size: 4.27vw;
-    padding: 1em 3em;
-    margin: 1em auto;
+    padding-right: 12.8vw;
+    padding-left: 12.8vw;
+    margin: 9.33vw auto 0;
     width: min-content; }
 
 .choice {
-  border-radius: 1em;
+  border-radius: 4vw;
   background-color: white;
   box-shadow: 0px 0.3em 0.5em #E2E2E2;
   display: flex;
   justify-content: space-between;
-  height: 69px;
+  height: 18.4vw;
   width: 100%;
   overflow: hidden;
-  margin-bottom: 1em; }
+  margin-bottom: 4vw; }
   .choice__description {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-content: space-between;
-    padding: 0.8em;
+    padding: 3.73vw 3.2vw;
     width: 100%;
     flex-wrap: wrap; }
   .choice__heading {
-    font-size: 1.12em; }
+    font-size: 4.7vw; }
   .choice__side {
     font-family: 'Roboto Thin';
-    font-size: 0.9em;
+    font-size: 4vw;
     margin-top: auto; }
   .choice__price {
     font-weight: bold;
-    font-size: 1em; }
+    font-size: 4vw; }
   .choice__select {
     position: relative;
-    left: 60px;
+    left: 16vw;
     height: 100%;
     background-color: #99E2D0;
     color: white;
-    transform: scaleX(60px); }
+    transform: scaleX(16vw); }
 
 /*# sourceMappingURL=style.css.map */
