--- a/scss/Pages/_menu.scss
+++ b/scss/Pages/_menu.scss
@@ -14,7 +14,7 @@
     position: relative;
     top: -10.67vw;
     border-radius: 10.67vw 10.67vw 0 0; 
-    padding: 10.67vw 3.73vw 18.67vw;
+    padding: 10.67vw 3.73vw 8vw;
     display: grid;
     align-items: center;
     background-color: $menu-background-color;
@@ -24,12 +24,12 @@
     &__restaurant{
         display: flex;
         justify-content:space-between;
-        margin-bottom: 9.07vw;
-        margin-right: 9.07vw;
+        margin-bottom: 4.8vw;
+        margin-right: 6.4vw;
     }
     &__heading{
         font-family: 'Shrikhand';
-        font-size: 7.6vw;
+        font-size: 7.3vw;
     }
     &__like{
         background-color: none;
@@ -37,62 +37,64 @@
     }
     &__subtitle{
         font-family: 'Roboto Thin';
+        font-size: 4.27vw;
         text-transform: uppercase;
-        margin-top: 1em;
-        margin-bottom: 0.3em;
+        margin-top: 4.27vw;
+        margin-bottom: 1.28vw;
     }
     &__green-line{
         background-color: $color-tertiary;
-        height: 3px;
-        width: 40px;
-        margin-bottom: 1em;
+        height: 0.4vw;
+        width: 10.67vw;
+        margin-bottom: 3.2vw;
     }
     &__command{
         @include button;
-        padding: 1em 3em;
-        margin: 1em auto;
+        padding-right: 12.8vw;
+        padding-left: 12.8vw;
+        margin: 9.33vw auto 0;
         width: min-content;
     }
 }
 
 .choice{
-    border-radius: 1em;
+    border-radius: 4vw;
     background-color: white;
     box-shadow: $box-shadow;
     display:flex;
     justify-content: space-between;
-    height: 69px;
+    height: 18.4vw;
     width:100%;
     overflow: hidden;
-    margin-bottom: 1em;
+    margin-bottom: 4vw;
     &__description{
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
         align-content: space-between;
-        padding: 0.8em;
+        padding: 3.73vw 3.2vw;
         width:100%;
         flex-wrap: wrap;
     }
     &__heading{
-        font-size: 1.12em;
+        font-size: 4.7vw;
     }
     &__side{
         font-family: 'Roboto Thin';
-        font-size: 0.9em;
+        font-size: 4vw;
         margin-top: auto;
     }
     &__price{
         font-weight: bold;
-        font-size: 1em;
+        font-size: 4vw;
     }
     &__select{
         position: relative;
-        left:60px;
+        left:16vw;
         height: 100%;
         background-color: $color-tertiary;
         color: white;
-        transform: scaleX(60px);
+        transform: scaleX(16vw);
     }
     
 }
