--- a/scss/Utils/_mixins.scss
+++ b/scss/Utils/_mixins.scss
@@ -1,9 +1,9 @@
 @mixin button {
     background: linear-gradient( 0deg, $color-primary, $color-secondary);
     padding: 4.8vw 5.87vw;
-    border-radius: 2em;
+    border-radius: 8.53vw;
     color: white;
-    box-shadow: 0 0.5em 0.5em #C4C4C4;
+    box-shadow: 0 2.13vw 2.13vw #C4C4C4;
     font-size: 4.27vw;
 }
 
